--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ img {
   align-items: center;
 
   height: 250px;
-  width: -webkit-fill-available;
+  width: 100%;
   margin: 200px 0px 0px 0px;
   background-color: rgba(0, 0, 0, 0.493);
   color: white;
